# quest-hook-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: build.yml  check.yml
src/: lib.rs
